fix text align, in the middle of inputwidth fix

--- a/journal/static/journal/activity_form /css/style.css
+++ b/journal/static/journal/activity_form /css/style.css
@@ -2,7 +2,7 @@
 	width: 50%;
 }
 
-.ActivityBox {
+.activity-box {
 	text-align: left;
 	margin-left: 50px;
 }
